1559162138 | 62 files | M bin/version.txt,  M content/panorama/localization/tenfoot_brazilian.txt,  M content/panorama/localization/tenfoot_bulgarian.txt,  M content/panorama/localization/tenfoot_czech.txt,  M content/panorama/localization/tenfoot_danish.txt,  M content/panorama/localization/tenfoot_dutch.txt,  M content/panorama/localization/tenfoot_finnish.txt,  M content/panorama/localization/tenfoot_french.txt,  M content/panorama/localization/tenfoot_german.txt,  M content/panorama/localization/tenfoot_greek.txt,  M content/panorama/localization/tenfoot_hungarian.txt,  M content/panorama/localization/tenfoot_italian.txt,  M content/panorama/localization/tenfoot_japanese.txt,  M content/panorama/localization/tenfoot_korean.txt,  M content/panorama/localization/tenfoot_koreana.txt,  M content/panorama/localization/tenfoot_latam.txt,  M content/panorama/localization/tenfoot_norwegian.txt,  M content/panorama/localization/tenfoot_polish.txt,  M content/panorama/localization/tenfoot_portuguese.txt,  M content/panorama/localization/t
https://steamdb.info/patchnotes/3869855/

--- a/content/panorama/localization/tenfoot_bulgarian.txt
+++ b/content/panorama/localization/tenfoot_bulgarian.txt
@@ -618,10 +618,10 @@
 "[english]Transition_Progress_Description"	"WAITING FOR..."
 "Now_Waiting"	"ИЗЧАКВАНЕ…"
 "[english]Now_Waiting"	"WAITING..."
-"HomeAppCheck"	"Подсилени SteamVR обкръжения"
-"[english]HomeAppCheck"	"Enhanced SteamVR Environments"
-"HomeAppDesc"	"Новите SteamVR обкръжения поддържат по-богати начални пространства, социални функции и още. Вземете участие, за да ги изпробвате и предоставете отзиви в SteamVR форума."
-"[english]HomeAppDesc"	"The new SteamVR Environments supports richer home spaces, social features, and more. Opt in to test and provide feedback on the SteamVR forums."
+"HomeAppCheck"	"SteamVR Home"
+"[english]HomeAppCheck"	"SteamVR Home"
+"HomeAppDesc"	"SteamVR Home поддържа по-богати начални пространства, социални функции и още."
+"[english]HomeAppDesc"	"SteamVR Home experience supports richer home spaces, social features, and more."
 "MutedLabel"	"Заглушен"
 "[english]MutedLabel"	"Muted"
 "BackToApp"	"НАЗАД КЪМ ПРИЛОЖЕНИЕТО"
@@ -668,6 +668,6 @@
 "[english]Panorama_Selection_Vietnamese"	"Tiếng Việt (Vietnamese)"
 "BindingCallout_Header"	"ПОКАЗВАНЕ НА КОНТРОЛИТЕ"
 "[english]BindingCallout_Header"	"SHOW CONTROLS"
-"App_Not_Responding"	"Приложението не откликва…"
-"[english]App_Not_Responding"	"Application not responding..."
+"App_Not_Responding"	"Изчакване за отклик от приложението"
+"[english]App_Not_Responding"	"Waiting for application to respond"
 }
