--- a/content/panorama/localization/tenfoot_czech.txt
+++ b/content/panorama/localization/tenfoot_czech.txt
@@ -619,10 +619,10 @@
 "[english]Transition_Progress_Description"	"WAITING FOR..."
 "Now_Waiting"	"ČEKÁ SE..."
 "[english]Now_Waiting"	"WAITING..."
-"HomeAppCheck"	"Vylepšená prostředí"
-"[english]HomeAppCheck"	"Enhanced SteamVR Environments"
-"HomeAppDesc"	"Nová prostředí nabízí bohatší domovské prostory, sociální funkce a spoustu dalšího. Zapojte se do jejich testování a podělte se s námi o svůj názor."
-"[english]HomeAppDesc"	"The new SteamVR Environments supports richer home spaces, social features, and more. Opt in to test and provide feedback on the SteamVR forums."
+"HomeAppCheck"	"Virtuální domov"
+"[english]HomeAppCheck"	"SteamVR Home"
+"HomeAppDesc"	"Virtuální domov nabízí bohatší prostory, sociální funkce a spoustu dalšího."
+"[english]HomeAppDesc"	"SteamVR Home experience supports richer home spaces, social features, and more."
 "MutedLabel"	"Umlčen"
 "[english]MutedLabel"	"Muted"
 "BackToApp"	"ZPĚT DO APLIKACE"
@@ -669,6 +669,6 @@
 "[english]Panorama_Selection_Vietnamese"	"Tiếng Việt (Vietnamese)"
 "BindingCallout_Header"	"ZOBRAZIT OVLÁDÁNÍ"
 "[english]BindingCallout_Header"	"SHOW CONTROLS"
-"App_Not_Responding"	"Aplikace neodpovídá..."
-"[english]App_Not_Responding"	"Application not responding..."
+"App_Not_Responding"	"Čeká se na odpověď aplikace"
+"[english]App_Not_Responding"	"Waiting for application to respond"
 }
