--- a/content/panorama/localization/tenfoot_dutch.txt
+++ b/content/panorama/localization/tenfoot_dutch.txt
@@ -619,9 +619,9 @@
 "Now_Waiting"	"WACHTEN..."
 "[english]Now_Waiting"	"WAITING..."
 "HomeAppCheck"	"Verbeterde SteamVR-omgevingen"
-"[english]HomeAppCheck"	"Enhanced SteamVR Environments"
+"[english]HomeAppCheck"	"SteamVR Home"
 "HomeAppDesc"	"De nieuwe SteamVR-omgevingen ondersteunen rijkere startomgevingen, sociale functies en meer. Meld je aan om mee te testen en feedback te leveren op de SteamVR-fora."
-"[english]HomeAppDesc"	"The new SteamVR Environments supports richer home spaces, social features, and more. Opt in to test and provide feedback on the SteamVR forums."
+"[english]HomeAppDesc"	"SteamVR Home experience supports richer home spaces, social features, and more."
 "MutedLabel"	"Gedempt"
 "[english]MutedLabel"	"Muted"
 "BackToApp"	"TERUG NAAR APP"
@@ -636,4 +636,14 @@
 "[english]VRSettingsCamera_RoomViewMode_EdgeA"	"Colored Edges"
 "VRSettingsTrackerUITitle"	"Vive Trackers beheren"
 "[english]VRSettingsTrackerUITitle"	"Manage Vive Trackers"
+"Panorama_Lang_Latam_Spanish"	"Spaans (Latijns-Amerika)"
+"[english]Panorama_Lang_Latam_Spanish"	"Latam"
+"Panorama_Lang_Latam_Vietnamese"	"Vietnamees"
+"[english]Panorama_Lang_Latam_Vietnamese"	"Vietnamese"
+"Panorama_Selection_Latam_Spanish"	"Español-Latinoamérica (Spaans - Latijns-Amerika)"
+"[english]Panorama_Selection_Latam_Spanish"	"Español-Latinoamérica (Spanish-Latin America)"
+"Panorama_Selection_Vietnamese"	"Tiếng Việt (Vietnamees)"
+"[english]Panorama_Selection_Vietnamese"	"Tiếng Việt (Vietnamese)"
+"BindingCallout_Header"	"BESTURING TONEN"
+"[english]BindingCallout_Header"	"SHOW CONTROLS"
 }
