--- a/content/panorama/localization/tenfoot_portuguese.txt
+++ b/content/panorama/localization/tenfoot_portuguese.txt
@@ -619,10 +619,10 @@
 "[english]Transition_Progress_Description"	"WAITING FOR..."
 "Now_Waiting"	"À ESPERA..."
 "[english]Now_Waiting"	"WAITING..."
-"HomeAppCheck"	"Ambientes SteamVR melhorados"
-"[english]HomeAppCheck"	"Enhanced SteamVR Environments"
-"HomeAppDesc"	"Os novos Ambientes SteamVR permitem espaços iniciais melhores, funcionalidades sociais e muito mais. Ativa para testá-los e diz-nos o que achas nos fóruns do SteamVR."
-"[english]HomeAppDesc"	"The new SteamVR Environments supports richer home spaces, social features, and more. Opt in to test and provide feedback on the SteamVR forums."
+"HomeAppCheck"	"SteamVR Home"
+"[english]HomeAppCheck"	"SteamVR Home"
+"HomeAppDesc"	"Desfruta de espaços iniciais melhores, funcionalidades sociais e muito mais."
+"[english]HomeAppDesc"	"SteamVR Home experience supports richer home spaces, social features, and more."
 "MutedLabel"	"Sem som"
 "[english]MutedLabel"	"Muted"
 "BackToApp"	"VOLTAR À APP"
@@ -669,6 +669,6 @@
 "[english]Panorama_Selection_Vietnamese"	"Tiếng Việt (Vietnamese)"
 "BindingCallout_Header"	"MOSTRAR CONTROLOS"
 "[english]BindingCallout_Header"	"SHOW CONTROLS"
-"App_Not_Responding"	"A aplicação não está a responder..."
-"[english]App_Not_Responding"	"Application not responding..."
+"App_Not_Responding"	"À espera que a aplicação responda"
+"[english]App_Not_Responding"	"Waiting for application to respond"
 }
