--- a/content/vrmonitor/translations/vrmonitor_brazilian.txt
+++ b/content/vrmonitor/translations/vrmonitor_brazilian.txt
@@ -2273,12 +2273,12 @@
 "[english]BS20_ConfigureChannel_IdentifyRequiresFirmareUpdate"	"%1 requires a device update to enable device identification."
 "BS_PowerManagement_VisibleNowInTracking"	"Visível nesta seção de rastreamento"
 "[english]BS_PowerManagement_VisibleNowInTracking"	"Visible now in this tracking session"
-"Monitor_RestartRequestedDialog_Title"	"Reinicialização necessária"
-"[english]Monitor_RestartRequestedDialog_Title"	"Restart Required"
+"Monitor_RestartRequestedDialog_Title"	"Reinicialização necessária para driver %1"
+"[english]Monitor_RestartRequestedDialog_Title"	"Restart for %1 driver"
 "Monitor_RestartRequestedDialog_MessageNoReason"	"O driver %1 precisa reiniciar o SteamVR."
 "[english]Monitor_RestartRequestedDialog_MessageNoReason"	"Driver %1 needs to restart SteamVR."
-"Monitor_RestartRequestedDialog_Message"	"O driver %1 precisa reiniciar o SteamVR.\n%2"
-"[english]Monitor_RestartRequestedDialog_Message"	"Driver %1 needs to restart SteamVR.\n%2"
+"Monitor_RestartRequestedDialog_Message"	"%1"
+"[english]Monitor_RestartRequestedDialog_Message"	"%1"
 "Monitor_RestartRequestedDialog_Restart"	"Reiniciar SteamVR"
 "[english]Monitor_RestartRequestedDialog_Restart"	"Restart SteamVR"
 "Monitor_RestartRequestedDialog_Quit"	"Fechar SteamVR"
@@ -2305,5 +2305,21 @@
 "[english]Monitor_WakingBaseStations"	"Bases Powering Up..."
 "Monitor_PuttingBaseStationsInStandby"	"Estações entrando em repouso..."
 "[english]Monitor_PuttingBaseStationsInStandby"	"Bases Powering Down..."
+"FirmwareWizard_ProgressPercentStarting"	"[ Iniciando... ]"
+"[english]FirmwareWizard_ProgressPercentStarting"	"[ Starting... ]"
+"FirmwareWizard_ProgressPercentSearching"	"[ Escaneando... ]"
+"[english]FirmwareWizard_ProgressPercentSearching"	"[ Scanning... ]"
+"BS20_UpdateRecovery_UpdateDevice"	"Restaurar dispositivo"
+"[english]BS20_UpdateRecovery_UpdateDevice"	"Recover Device"
+"VRApplicationError_None"	"Nenhum erro"
+"[english]VRApplicationError_None"	"No Error"
+"VRApplicationError_UnknownApplication"	"Aplicativo desconhecido"
+"[english]VRApplicationError_UnknownApplication"	"Unknown application"
+"VRApplicationError_InvalidParameter"	"Parâmetro inválido"
+"[english]VRApplicationError_InvalidParameter"	"Invalid parameter"
+"oculus_display_lost"	"O sistema Oculus perdeu a conexão ao visor. Por favor, verifique a conexão do headset e reinicie."
+"[english]oculus_display_lost"	"The Oculus system has lost its connection to the display. Please check your headset's connection and then restart."
+"BS20_UpdateRecovery_FoundStations"	"Varredura concluída.<br><br><font color=#ffffff>As estações base abaixo foram atualizadas pela metade.<br><br>Por favor, selecione uma estação base e clique em \"Restaurar dispositivo\" para continuar.</font>"
+"[english]BS20_UpdateRecovery_FoundStations"	"Scan Completed.<br><br><font color=#ffffff>These Base Stations have incomplete updates.<br><br>Please select a Base Station and click 'Recover Device' to continue.</font>"
 }
 }
