--- a/content/vrmonitor/translations/vrmonitor_errors_brazilian.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_brazilian.txt
@@ -119,7 +119,7 @@
 "[english]VRInitError_Init_UserConfigDirectoryInvalid_Action"	"Set Config Directory"
 "VRInitError_Init_HmdNotFound_Header"	"Headset não detectado"
 "[english]VRInitError_Init_HmdNotFound_Header"	"Headset Not Detected"
-"VRInitError_Init_HmdNotFound_Description"	"Confirme que o headset está conectado corretamente e reinicie-o clicando abaixo."
+"VRInitError_Init_HmdNotFound_Description"	"Confirme que o headset está conectado corretamente e reinicie-o abaixo."
 "[english]VRInitError_Init_HmdNotFound_Description"	"Make sure your headset is connected properly, then reset it below."
 "VRInitError_Init_HmdNotFound_Action"	"Mais informações"
 "[english]VRInitError_Init_HmdNotFound_Action"	"More info"
@@ -998,6 +998,8 @@
 "[english]Popover_NoPose_Base_Action"	"More info"
 "Popover_NoPose_Tracker_Action"	"Mais informações"
 "[english]Popover_NoPose_Tracker_Action"	"More info"
+"Popover_Standby_Invalid_Description"	"Este dispositivo está em repouso."
+"[english]Popover_Standby_Invalid_Description"	"This device is standing by."
 "Popover_BaseStationNoPowerManagement_Action"	"Mais informações"
 "[english]Popover_BaseStationNoPowerManagement_Action"	"More info"
 "Popover_ConnectionRefusedBySteam_Action"	"Mais informações"
