--- a/content/vrmonitor/translations/vrmonitor_errors_finnish.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_finnish.txt
@@ -969,10 +969,20 @@
 "[english]Warning_DismissableWarning_SteamVRUpdated_Action"	"See what changed"
 "Warning_DismissableWarning_SteamVRUpdated_ActionURL"	"%1"
 "[english]Warning_DismissableWarning_SteamVRUpdated_ActionURL"	"%1"
+"Warning_DismissableWarning_HeadsetDisplayDisconnected_Header"	"Yhteys VR-laseihin katkaistu"
+"[english]Warning_DismissableWarning_HeadsetDisplayDisconnected_Header"	"Headset Disconnected"
 "Warning_DismissableWarning_HeadsetDisplayDisconnected_Action"	"Lisätietoja"
 "[english]Warning_DismissableWarning_HeadsetDisplayDisconnected_Action"	"More info"
+"Warning_DismissableWarning_HeadsetDisplayDisconnected_ActionURL"	"https://help.steampowered.com/fi/wizard/HelpWithGame/?appid=250820"
+"[english]Warning_DismissableWarning_HeadsetDisplayDisconnected_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
+"Warning_DismissableWarning_HDCPError_Header"	"SteamVR-virhe"
+"[english]Warning_DismissableWarning_HDCPError_Header"	"SteamVR Error"
 "Warning_DismissableWarning_HDCPError_Description"	"SteamVR kohtasi HDCP-virheen. Luo SteamVR-järjestelmäraportti lisätietoja varten."
 "[english]Warning_DismissableWarning_HDCPError_Description"	"SteamVR has encountered an HDCP error. Please create a SteamVR System Report for further info."
+"Warning_DismissableWarning_HDCPError_Action"	"Lisätietoja"
+"[english]Warning_DismissableWarning_HDCPError_Action"	"More info"
+"Warning_DismissableWarning_HDCPError_ActionURL"	"https://help.steampowered.com/fi/wizard/HelpWithGame/?appid=250820"
+"[english]Warning_DismissableWarning_HDCPError_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
 "VRInitError_Init_InstallationNotFound_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGameIssue/?appid=250820&issueid=374&nodeid=81&return_nodeid=71"
 "[english]VRInitError_Init_InstallationNotFound_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGameIssue/?appid=250820&issueid=374&nodeid=81&return_nodeid=71"
 "VRInitError_Init_HmdNotFound_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGameIssue/?appid=250820&issueid=374&nodeid=3&return_nodeid=71"
@@ -1055,6 +1065,80 @@
 "[english]Lighthouse_BasestationInternalFault_03_Header"	"Base Station Error"
 "Lighthouse_BasestationInternalFault_04_Header"	"Tukiasema ei käytettävissä"
 "[english]Lighthouse_BasestationInternalFault_04_Header"	"Base Station Error"
+"Lighthouse_BasestationInternalFault_05_Header"	"Virhe tukiasemassa"
+"[english]Lighthouse_BasestationInternalFault_05_Header"	"Base Station Error"
+"Popover_Off_Tracker_Action"	"Lisätietoja"
+"[english]Popover_Off_Tracker_Action"	"More info"
+"Popover_Off_Tracker_ActionURL"	"https://community.viveport.com/t5/Technical-Support/bd-p/technical-support"
+"[english]Popover_Off_Tracker_ActionURL"	"https://community.viveport.com/t5/Technical-Support/bd-p/technical-support"
+"Popover_Pose_Invalid_Action"	"Lisätietoja"
+"[english]Popover_Pose_Invalid_Action"	"More info"
+"Popover_Pose_Invalid_ActionURL"	"https://help.steampowered.com/fi/wizard/HelpWithGame/?appid=250820"
+"[english]Popover_Pose_Invalid_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
+"Popover_NoPose_Invalid_Action"	"Lisätietoja"
+"[english]Popover_NoPose_Invalid_Action"	"More info"
+"Popover_NoPose_Invalid_ActionURL"	"https://help.steampowered.com/fi/wizard/HelpWithGameIssue/?appid=250820&issueid=374&nodeid=109&return_nodeid=71"
+"[english]Popover_NoPose_Invalid_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGameIssue/?appid=250820&issueid=374&nodeid=109&return_nodeid=71"
+"Popover_NoPose_HMD_Action"	"Lisätietoja"
+"[english]Popover_NoPose_HMD_Action"	"More info"
+"Popover_NoPose_HMD_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
+"[english]Popover_NoPose_HMD_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
+"Popover_NoPose_Base_Action"	"Lisätietoja"
+"[english]Popover_NoPose_Base_Action"	"More info"
+"Popover_NoPose_Base_ActionURL"	"https://help.steampowered.com/fi/wizard/HelpWithGame/?appid=250820"
+"[english]Popover_NoPose_Base_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
+"Popover_NoPose_Tracker_Action"	"Lisätietoja"
+"[english]Popover_NoPose_Tracker_Action"	"More info"
+"Popover_NoPose_Tracker_ActionURL"	"https://help.steampowered.com/fi/wizard/HelpWithGame/?appid=250820"
+"[english]Popover_NoPose_Tracker_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
+"Popover_BaseStationNoPowerManagement_Action"	"Lisätietoja"
+"[english]Popover_BaseStationNoPowerManagement_Action"	"More info"
+"Popover_BaseStationNoPowerManagement_ActionURL"	"https://help.steampowered.com/fi/wizard/HelpWithGame/?appid=250820"
+"[english]Popover_BaseStationNoPowerManagement_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
+"Popover_FirmwareUpdateNeededWarning_ActionURL"	"https://help.steampowered.com/fi/wizard/HelpWithGame/?appid=250820"
+"[english]Popover_FirmwareUpdateNeededWarning_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
+"Popover_ConnectionRefusedBySteam_Action"	"Lisätietoja"
+"[english]Popover_ConnectionRefusedBySteam_Action"	"More info"
+"Popover_ConnectionRefusedBySteam_ActionURL"	"https://help.steampowered.com/fi/wizard/HelpWithGame/?appid=250820"
+"[english]Popover_ConnectionRefusedBySteam_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
+"Popover_BaseStationsTooFarApart_Action"	"Lisätietoja"
+"[english]Popover_BaseStationsTooFarApart_Action"	"More info"
+"Popover_BaseStationsTooFarApart_ActionURL"	"https://help.steampowered.com/fi/wizard/HelpWithGame/?appid=250820"
+"[english]Popover_BaseStationsTooFarApart_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
+"Popover_SeeOnlyOneBase_Action"	"Lisätietoja"
+"[english]Popover_SeeOnlyOneBase_Action"	"More info"
+"Popover_SeeOnlyOneBase_ActionURL"	"https://support.steampowered.com/steamvr/HTC_Vive/"
+"[english]Popover_SeeOnlyOneBase_ActionURL"	"https://support.steampowered.com/steamvr/HTC_Vive/"
+"Warning_DismissableWarning_RunTutorialAgain_ActionURL"	"https://help.steampowered.com/fi/wizard/HelpWithGame/?appid=250820"
+"[english]Warning_DismissableWarning_RunTutorialAgain_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
+"Warning_DismissableWarning_BasestationsTooFarApart_Action"	"Lisätietoja"
+"[english]Warning_DismissableWarning_BasestationsTooFarApart_Action"	"More info"
+"Warning_DismissableWarning_BasestationsTooFarApart_ActionURL"	"https://help.steampowered.com/fi/wizard/HelpWithGame/?appid=250820"
+"[english]Warning_DismissableWarning_BasestationsTooFarApart_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
+"Warning_DismissableWarning_BasestationSingleBaseModeHint_Action"	"Lisätietoja"
+"[english]Warning_DismissableWarning_BasestationSingleBaseModeHint_Action"	"More info"
+"Warning_DismissableWarning_BasestationSingleBaseModeHint_ActionURL"	"https://support.steampowered.com/steamvr/HTC_Vive/"
+"[english]Warning_DismissableWarning_BasestationSingleBaseModeHint_ActionURL"	"https://support.steampowered.com/steamvr/HTC_Vive/"
+"Warning_DismissableWarning_WarningsForTheFirstTime_Action"	"Lisätietoja"
+"[english]Warning_DismissableWarning_WarningsForTheFirstTime_Action"	"More info"
+"Warning_DismissableWarning_WarningsForTheFirstTime_ActionURL"	"https://help.steampowered.com/fi/wizard/HelpWithGame/?appid=250820"
+"[english]Warning_DismissableWarning_WarningsForTheFirstTime_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
+"Warning_DismissableWarning_MissedFrames_Action"	"Lisätietoja"
+"[english]Warning_DismissableWarning_MissedFrames_Action"	"More info"
+"Warning_DismissableWarning_MissedFrames_ActionURL"	"https://help.steampowered.com/fi/wizard/HelpWithGame/?appid=250820"
+"[english]Warning_DismissableWarning_MissedFrames_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
+"Warning_DismissableWarning_UnknownHardwareDetected_Action"	"Lisätietoja"
+"[english]Warning_DismissableWarning_UnknownHardwareDetected_Action"	"More info"
+"Warning_DismissableWarning_UnknownHardwareDetected_ActionURL"	"https://help.steampowered.com/fi/wizard/HelpWithGame/?appid=250820"
+"[english]Warning_DismissableWarning_UnknownHardwareDetected_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
+"Warning_DismissableWarning_Windows8_Action"	"Lisätietoja"
+"[english]Warning_DismissableWarning_Windows8_Action"	"More info"
+"Warning_DismissableWarning_Windows8_ActionURL"	"https://help.steampowered.com/fi/wizard/HelpWithGame/?appid=250820"
+"[english]Warning_DismissableWarning_Windows8_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
+"Warning_DismissableWarning_HeadsetTetherDisconnected_Header"	"VR-lasien Tether-yhteys katkaistu"
+"[english]Warning_DismissableWarning_HeadsetTetherDisconnected_Header"	"Tether Disconnected at Headset"
+"Warning_DismissableWarning_HeadsetTetherDisconnected_Description"	"VR-lasien kaapeli irtosi. Varmista, että kaapeli on kunnolla kiinni VR-lasiesi takaosassa."
+"[english]Warning_DismissableWarning_HeadsetTetherDisconnected_Description"	"Your headset's cable has become disconnected at the headset. Please ensure the connection behind the face gasket is firmly seated."
 "Warning_DismissableWarning_HeadsetTetherDisconnected_Action"	"Lisätietoa"
 "[english]Warning_DismissableWarning_HeadsetTetherDisconnected_Action"	"More info"
 "Warning_DismissableWarning_HeadsetTetherDisconnected_ActionURL"	"https://help.steampowered.com/fi/wizard/HelpWithGame/?appid=250820"
@@ -1063,5 +1147,9 @@
 "[english]Warning_DismissableWarning_OutOfVideoMemory_Action"	"More info"
 "Warning_DismissableWarning_OutOfVideoMemory_ActionURL"	"https://help.steampowered.com/fi/wizard/HelpWithGame/?appid=250820"
 "[english]Warning_DismissableWarning_OutOfVideoMemory_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
+"VRInitError_Driver_HmdDisplayNotFoundLaptop_Action"	"Lisätietoja"
+"[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_Action"	"More info"
+"VRInitError_Driver_HmdDisplayNotFoundLaptop_ActionURL"	"https://help.steampowered.com/fi/wizard/HelpWithGameIssue/?appid=250820&issueid=374&nodeid=39&return_nodeid=71"
+"[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGameIssue/?appid=250820&issueid=374&nodeid=39&return_nodeid=71"
 }
 }
