--- a/content/vrmonitor/translations/vrmonitor_errors_german.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_german.txt
@@ -17,13 +17,13 @@
 "[english]Error_HMDDoesNotTrack_Action"	"More info"
 "Error_NoCompositorAvailable_Header"	"SteamVR-Fehler"
 "[english]Error_NoCompositorAvailable_Header"	"SteamVR Fail"
-"Error_NoCompositorAvailable_Description"	"Damit SteamVR ordnungsgemäß ausgeführt werden kann, muss der Compositor gestartet sein."
+"Error_NoCompositorAvailable_Description"	"Oh nein! Bei SteamVR ist ein unerwarteter Fehler aufgetreten."
 "[english]Error_NoCompositorAvailable_Description"	"Oh no! SteamVR has encountered an unexpected problem."
 "Error_NoCompositorAvailable_Action"	"SteamVR neu starten"
 "[english]Error_NoCompositorAvailable_Action"	"Restart SteamVR"
 "Error_NoChaperoneAvailable_Header"	"Raumvermessung"
 "[english]Error_NoChaperoneAvailable_Header"	"Room Setup"
-"Error_NoChaperoneAvailable_Description"	"Damit SteamVR ordnungsgemäß ausgeführt werden kann, müssen Sie Ihren Raum vermessen."
+"Error_NoChaperoneAvailable_Description"	"Wie es aussieht, ist es an der Zeit, Ihren VR-Spielbereich und die Chaperone-Begrenzungen zu konfigurieren."
 "[english]Error_NoChaperoneAvailable_Description"	"Looks like it's time to configure your VR play area and chaperone boundaries."
 "Error_NoChaperoneAvailable_Action"	"Raumvermessung durchführen"
 "[english]Error_NoChaperoneAvailable_Action"	"Perform Room Setup"
@@ -35,19 +35,19 @@
 "[english]Error_CompositorNotFullscreen_Action"	"Enable fullscreen mode"
 "Error_CompositorNotRunning_Header"	"SteamVR-Fehler"
 "[english]Error_CompositorNotRunning_Header"	"SteamVR Fail"
-"Error_CompositorNotRunning_Description"	"Damit SteamVR ordnungsgemäß ausgeführt werden kann, benötigen Sie einen Compositor."
+"Error_CompositorNotRunning_Description"	"Oh nein! Bei SteamVR ist ein unerwarteter Fehler aufgetreten."
 "[english]Error_CompositorNotRunning_Description"	"Oh no! SteamVR has encountered an unexpected problem."
 "Error_CompositorNotRunning_Action"	"SteamVR neu starten"
 "[english]Error_CompositorNotRunning_Action"	"Restart SteamVR"
 "Error_CompositorTooManyRunning_Header"	"SteamVR-Fehler"
 "[english]Error_CompositorTooManyRunning_Header"	"SteamVR Fail"
-"Error_CompositorTooManyRunning_Description"	"Damit SteamVR ordnungsgemäß ausgeführt werden kann, darf nur ein Compositor ausgeführt werden."
+"Error_CompositorTooManyRunning_Description"	"Oh nein! Bei SteamVR ist ein unerwarteter Fehler aufgetreten."
 "[english]Error_CompositorTooManyRunning_Description"	"Oh no! SteamVR has encountered an unexpected problem."
 "Error_CompositorTooManyRunning_Action"	"SteamVR neu starten"
 "[english]Error_CompositorTooManyRunning_Action"	"Restart SteamVR"
 "Error_VRServerNotRunning_Header"	"SteamVR-Fehler"
 "[english]Error_VRServerNotRunning_Header"	"SteamVR Fail"
-"Error_VRServerNotRunning_Description"	"Damit SteamVR ordnungsgemäß ausgeführt werden kann, benötigen Sie einen VRServer."
+"Error_VRServerNotRunning_Description"	"Oh nein! Bei SteamVR ist ein unerwarteter Fehler aufgetreten."
 "[english]Error_VRServerNotRunning_Description"	"Oh no! SteamVR has encountered an unexpected problem."
 "Error_VRServerNotRunning_Action"	"SteamVR neu starten"
 "[english]Error_VRServerNotRunning_Action"	"Restart SteamVR"
@@ -405,7 +405,7 @@
 "[english]ChaperoneCalibrationState_Warning_BaseStationMayHaveMoved_Action"	"Perform Room Setup"
 "ChaperoneCalibrationState_Warning_BaseStationRemoved_Header"	"Basisstation entfernt"
 "[english]ChaperoneCalibrationState_Warning_BaseStationRemoved_Header"	"Base station removed"
-"ChaperoneCalibrationState_Warning_BaseStationRemoved_Description"	"Eine der Basisstationen sendet keine Signale mehr. Bitte führen Sie die Raumvermessung aus."
+"ChaperoneCalibrationState_Warning_BaseStationRemoved_Description"	"SteamVR hat das Signal einer Ihrer Basisstationen verloren. Bitte führen Sie die Raumvermessung erneut durch."
 "[english]ChaperoneCalibrationState_Warning_BaseStationRemoved_Description"	"SteamVR has lost track of one of your base stations. Please perform Room Setup again."
 "ChaperoneCalibrationState_Warning_BaseStationRemoved_Action"	"Raumvermessung durchführen"
 "[english]ChaperoneCalibrationState_Warning_BaseStationRemoved_Action"	"Perform Room Setup"
@@ -607,7 +607,7 @@
 "[english]Explanation_ResetDismissableWarnings"	"Temporary warnings are reset and will show again as needed."
 "Warning_DismissableWarning_OpticalBasestationSyncWarning_Action"	"Weitere Informationen"
 "[english]Warning_DismissableWarning_OpticalBasestationSyncWarning_Action"	"More info"
-"Warning_DismissableWarning_MissedFrames_Description"	"Die aktuelle VR-Anwendung wird zu langsam ausgeführt, wodurch Sie gegebenenfalls eine schlechte Erfahrung erzielen. Dies kann daran liegen, dass die Anwendung zu anspruchsvoll oder Ihr Computer zu langsam ist."
+"Warning_DismissableWarning_MissedFrames_Description"	"Die aktuelle VR-Anwendung wird zu langsam ausgeführt und beeinträchtigt möglicherweise Ihr Spielerlebnis. Dies kann daran liegen, dass die Anwendung zu anspruchsvoll oder Ihr Computer zu langsam ist."
 "[english]Warning_DismissableWarning_MissedFrames_Description"	"The current VR application runs too slowly, which can result in a bad experience. This may be because the application is too demanding, or your computer is too slow."
 "Warning_DismissableWarning_BluetoothDriverNeedsInstallation_Header"	"Bluetoothfehler"
 "[english]Warning_DismissableWarning_BluetoothDriverNeedsInstallation_Header"	"Bluetooth Error"
@@ -877,11 +877,11 @@
 "[english]VRInitError_VendorSpecific_WindowsNotInDevMode_Header"	"Windows 10 Update"
 "VRInitError_VendorSpecific_WindowsNotInDevMode_Description"	"Um SteamVR mit Windows Mixed Reality zu verwenden, müssen Sie das aktuellste Windows-Update installieren."
 "[english]VRInitError_VendorSpecific_WindowsNotInDevMode_Description"	"To use SteamVR with Windows Mixed Reality, you need to install the latest Windows update."
-"VRInitError_VendorSpecific_WindowsNotInDevMode_Action"	"Klicken Sie hier für weitere Informationen."
+"VRInitError_VendorSpecific_WindowsNotInDevMode_Action"	"Weitere Informationen"
 "[english]VRInitError_VendorSpecific_WindowsNotInDevMode_Action"	"Learn more"
 "Lighthouse_RecommendControllerUpgradeOverUsb_Header"	"Controllerupdate erforderlich"
 "[english]Lighthouse_RecommendControllerUpgradeOverUsb_Header"	"Controller Update Required"
-"Lighthouse_RecommendControllerUpgradeOverUsb_Description"	"Ein Controller hat Probleme damit, die drahtlose Verbindung aufrechtzuerhalten. Bitte schließen Sie Ihre Controller für ein Firmwareupdate mit einem USB-Kabel an, um dieses Problem zu beheben."
+"Lighthouse_RecommendControllerUpgradeOverUsb_Description"	"Ein Controller hat Probleme, die drahtlose Verbindung aufrechtzuerhalten. Bitte schließen Sie diesen Controller mit einem USB-Kabel an und aktualisieren Sie das Gerät."
 "[english]Lighthouse_RecommendControllerUpgradeOverUsb_Description"	"A controller is having trouble staying connected wirelessly. Please connect this controller with a USB cable, then update the device."
 "Lighthouse_RecommendControllerUpgradeOverUsb_Action"	"Controller aktualisieren"
 "[english]Lighthouse_RecommendControllerUpgradeOverUsb_Action"	"Update Controller"
@@ -889,7 +889,7 @@
 "[english]Lighthouse_RecommendControllerUpgradeOverUsb_ActionURL"	"vrmonitor://firmwareupdate/"
 "Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Header"	"Basisstation – Einrichtungsfehler"
 "[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Header"	"Base Station Setup Error"
-"Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Description"	"Zwei Basisstationen zur selben Zeit auf Kanal %1 gefunden. Verwenden Sie für alle sichtbaren Basisstationen einzigartige Kanäle, um die besten Ergebnisse zu erzielen."
+"Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Description"	"SteamVR hat mehrere Basisstationen gefunden, die auf Kanal %1 eingestellt sind. Verwenden Sie für das beste Ergebnis für jede Basisstation einen anderen Kanal."
 "[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Description"	"SteamVR has detected multiple bases set to channel %1. For best results, use unique channels for all bases that can be seen at the same time."
 "Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Action"	"Konfigurieren"
 "[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Action"	"Configure"
@@ -961,7 +961,7 @@
 "[english]VRInitError_IPC_ServerInitFailed_FirstActionURL"	"vrmonitor://reboothmd"
 "Warning_DismissableWarning_SteamVRInSafeMode_Header"	"Abesicherter Modus"
 "[english]Warning_DismissableWarning_SteamVRInSafeMode_Header"	"Safe Mode"
-"Warning_DismissableWarning_SteamVRInSafeMode_Description"	"Aufgrund eines kürzlichen Absturzes läuft SteamVR im abgesicherten Modus. In diesem Modus werden nur vertrauenswürdige Treiber geladen, um Kompatibilitätsprobleme zu vermeiden."
+"Warning_DismissableWarning_SteamVRInSafeMode_Description"	"<span>Aufgrund</span> eines kürzlichen Absturzes läuft SteamVR im abgesicherten Modus.<p><a style ='color: rgb(212, 212, 212);' href='https://support.steampowered.com/kb_article.php?ref=8566-SDZC-9326'>Weitere Infromationen</a>"
 "[english]Warning_DismissableWarning_SteamVRInSafeMode_Description"	"<span>Due</span> to a recent crash, SteamVR is currently operating in Safe Mode.<p><a style ='color: rgb(212, 212, 212);' href='https://support.steampowered.com/kb_article.php?ref=8566-SDZC-9326'>Learn more</a>."
 "Warning_DismissableWarning_SteamVRInSafeMode_Action"	"Abgesicherten Modus deaktivieren"
 "[english]Warning_DismissableWarning_SteamVRInSafeMode_Action"	"Disable Safe Mode"
