--- a/content/vrmonitor/translations/vrmonitor_errors_portuguese.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_portuguese.txt
@@ -256,9 +256,9 @@
 "[english]VRInitError_Driver_CalibrationInvalid_Description"	"SteamVR is having trouble installing drivers for your headset."
 "VRInitError_Driver_CalibrationInvalid_Action"	"Mais informações"
 "[english]VRInitError_Driver_CalibrationInvalid_Action"	"More info"
-"VRInitError_Driver_HmdDisplayNotFound_Header"	"Headset desconectado"
+"VRInitError_Driver_HmdDisplayNotFound_Header"	"Ecrã do headset desconectado"
 "[english]VRInitError_Driver_HmdDisplayNotFound_Header"	"Headset Display Disconnected"
-"VRInitError_Driver_HmdDisplayNotFound_Description"	"Assegura-te de que o teu headset está conectado devidamente e depois reinicia-o abaixo."
+"VRInitError_Driver_HmdDisplayNotFound_Description"	"Assegura-te de que os cabos de vídeo estão conectados devidamente. O ecrã do headset não foi encontrado."
 "[english]VRInitError_Driver_HmdDisplayNotFound_Description"	"Please make sure your video cables are securely connected. The headset's display was not found."
 "VRInitError_Driver_HmdDisplayNotFound_Action"	"Mais informações"
 "[english]VRInitError_Driver_HmdDisplayNotFound_Action"	"More info"
@@ -415,7 +415,7 @@
 "[english]ChaperoneCalibrationState_Warning_SeatedBoundsInvalid_Action"	"Perform Room Setup"
 "ChaperoneCalibrationState_Error_Header"	"Configuração da Divisão"
 "[english]ChaperoneCalibrationState_Error_Header"	"Room Setup"
-"ChaperoneCalibrationState_Error_Description"	"Por favor, inicia a Configuração da Divisão para redefinires a tua área de jogo e os limites do Chaperone."
+"ChaperoneCalibrationState_Error_Description"	"Por favor, inicia a Configuração da Divisão para definires a tua área de jogo e os limites do Chaperone."
 "[english]ChaperoneCalibrationState_Error_Description"	"Please perform Room Setup to define your play area and chaperone bounds."
 "ChaperoneCalibrationState_Error_Action"	"Abrir Configuração da Divisão"
 "[english]ChaperoneCalibrationState_Error_Action"	"Perform Room Setup"
@@ -425,19 +425,19 @@
 "[english]ChaperoneCalibrationState_Error_BaseStationUninitialized_Description"	"Please perform Room Setup to begin using SteamVR."
 "ChaperoneCalibrationState_Error_BaseStationUninitialized_Action"	"Abrir Configuração da Divisão"
 "[english]ChaperoneCalibrationState_Error_BaseStationUninitialized_Action"	"Perform Room Setup"
-"ChaperoneCalibrationState_Error_BaseStationConflict_Header"	"Erro da Configuração da Divisão"
+"ChaperoneCalibrationState_Error_BaseStationConflict_Header"	"Configuração da Divisão"
 "[english]ChaperoneCalibrationState_Error_BaseStationConflict_Header"	"Room Setup"
 "ChaperoneCalibrationState_Error_BaseStationConflict_Description"	"Por favor, inicia a Configuração da Divisão para redefinires a tua área de jogo e os limites do Chaperone."
 "[english]ChaperoneCalibrationState_Error_BaseStationConflict_Description"	"Please perform Room Setup to redefine your play area and chaperone bounds."
 "ChaperoneCalibrationState_Error_BaseStationConflict_Action"	"Abrir Configuração da Divisão"
 "[english]ChaperoneCalibrationState_Error_BaseStationConflict_Action"	"Perform Room Setup"
-"ChaperoneCalibrationState_Error_PlayAreaInvalid_Header"	"Erro da Configuração da Divisão"
+"ChaperoneCalibrationState_Error_PlayAreaInvalid_Header"	"Configuração da Divisão"
 "[english]ChaperoneCalibrationState_Error_PlayAreaInvalid_Header"	"Room Setup"
 "ChaperoneCalibrationState_Error_PlayAreaInvalid_Description"	"Por favor, inicia a Configuração da Divisão para redefinires a tua área de jogo e os limites do Chaperone."
 "[english]ChaperoneCalibrationState_Error_PlayAreaInvalid_Description"	"Please perform Room Setup to redefine your play area and chaperone bounds."
 "ChaperoneCalibrationState_Error_PlayAreaInvalid_Action"	"Abrir Configuração da Divisão"
 "[english]ChaperoneCalibrationState_Error_PlayAreaInvalid_Action"	"Perform Room Setup"
-"ChaperoneCalibrationState_Error_CollisionBoundsInvalid_Header"	"Erro da Configuração da Divisão"
+"ChaperoneCalibrationState_Error_CollisionBoundsInvalid_Header"	"Configuração da Divisão"
 "[english]ChaperoneCalibrationState_Error_CollisionBoundsInvalid_Header"	"Room Setup"
 "ChaperoneCalibrationState_Error_CollisionBoundsInvalid_Description"	"Por favor, inicia a Configuração da Divisão para redefinires a tua área de jogo e os limites do Chaperone."
 "[english]ChaperoneCalibrationState_Error_CollisionBoundsInvalid_Description"	"Please perform Room Setup to redefine your play area and chaperone bounds."
@@ -577,7 +577,7 @@
 "[english]Warning_DismissableWarning_RunTutorialAgain_Description"	"You can use Room Setup or the Tutorial again anytime from the SteamVR menu below."
 "Warning_DismissableWarning_RunTutorialAgain_Action"	"Mais informações"
 "[english]Warning_DismissableWarning_RunTutorialAgain_Action"	"More info"
-"Warning_DismissableWarning_BasestationsTooFarApart_Header"	"Observação sobre a tua área"
+"Warning_DismissableWarning_BasestationsTooFarApart_Header"	"Aviso da área de R.V."
 "[english]Warning_DismissableWarning_BasestationsTooFarApart_Header"	"VR setup notice"
 "Warning_DismissableWarning_BasestationsTooFarApart_Description"	"As tuas estações-base podem estar demasiado longe uma da outra. Para a melhor experiência possível, as estações-base não devem estar a mais de 5,5 metros uma da outra."
 "[english]Warning_DismissableWarning_BasestationsTooFarApart_Description"	"Your base stations are farther apart than recommended. For the best experience, consider repositioning them so they're no more than 5.5 meters (18 feet) apart. "
@@ -651,7 +651,7 @@
 "[english]Warning_DismissableWarning_BluetoothLinkCommunicationFailed_Action"	"Bluetooth Settings"
 "Popover_Pose_Base_Action"	"Identificar estação-base"
 "[english]Popover_Pose_Base_Action"	"Identify base station"
-"Popover_BaseStationsTooFarApart_Header"	"Observação sobre a tua área"
+"Popover_BaseStationsTooFarApart_Header"	"Aviso da área de R.V."
 "[english]Popover_BaseStationsTooFarApart_Header"	"VR setup notice"
 "Popover_BaseStationsTooFarApart_Description"	"A distância entre as tuas estações-base é de %1 metros. Para a melhor experiência possível, as estações-base não devem estar a mais de 5,5 metros uma da outra."
 "[english]Popover_BaseStationsTooFarApart_Description"	"Your base stations are %1 meters apart. For the best experience, consider repositioning them so they're no more than 5.5 meters (18 feet) apart."
@@ -721,7 +721,7 @@
 "[english]Warning_DismissableWarning_DisplayInExtendedMode_Header"	"Headset Notice"
 "Warning_DismissableWarning_DisplayInExtendedMode_Description"	"O SteamVR detetou o teu headset a ser usado como um monitor. Para melhores resultados, muda para o Modo de Visualização Direta."
 "[english]Warning_DismissableWarning_DisplayInExtendedMode_Description"	"SteamVR has detected your headset running as a monitor. For best results, please switch to Direct Display Mode."
-"Warning_DismissableWarning_DisplayInExtendedMode_Action"	"Ativar Modo de Visualização Direta"
+"Warning_DismissableWarning_DisplayInExtendedMode_Action"	"Ativar Visualização Direta"
 "[english]Warning_DismissableWarning_DisplayInExtendedMode_Action"	"Enable Direct Display Mode"
 "VRInitError_Driver_TrackedDeviceInterfaceUnknown_Header"	"Erro de dispositivo"
 "[english]VRInitError_Driver_TrackedDeviceInterfaceUnknown_Header"	"Device Error"
@@ -985,7 +985,7 @@
 "[english]Warning_DismissableWarning_HeadsetDisplayDisconnected_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
 "Warning_DismissableWarning_HDCPError_Header"	"Erro do SteamVR"
 "[english]Warning_DismissableWarning_HDCPError_Header"	"SteamVR Error"
-"Warning_DismissableWarning_HDCPError_Description"	"O SteamVR encontrou um erro de HDMI. Cria um relatório de sistema do SteamVR para mais informações."
+"Warning_DismissableWarning_HDCPError_Description"	"O SteamVR encontrou um erro de HDCP. Cria um relatório de sistema do SteamVR para mais informações."
 "[english]Warning_DismissableWarning_HDCPError_Description"	"SteamVR has encountered an HDCP error. Please create a SteamVR System Report for further info."
 "Warning_DismissableWarning_HDCPError_Action"	"Mais informações"
 "[english]Warning_DismissableWarning_HDCPError_Action"	"More info"
@@ -1199,5 +1199,33 @@
 "[english]Warning_DismissableWarning_Windows8_Action"	"More info"
 "Warning_DismissableWarning_Windows8_ActionURL"	"https://help.steampowered.com/pt/wizard/HelpWithGame/?appid=250820"
 "[english]Warning_DismissableWarning_Windows8_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
+"Warning_DismissableWarning_HeadsetTetherDisconnected_Header"	"Cabo desconectado do headset"
+"[english]Warning_DismissableWarning_HeadsetTetherDisconnected_Header"	"Tether Disconnected at Headset"
+"Warning_DismissableWarning_HeadsetTetherDisconnected_Description"	"O cabo do teu headset desconectou-se. Assegura-te de que o cabo atrás da junta facial está conectado firmemente."
+"[english]Warning_DismissableWarning_HeadsetTetherDisconnected_Description"	"Your headset's cable has become disconnected at the headset. Please ensure the connection behind the face gasket is firmly seated."
+"Warning_DismissableWarning_HeadsetTetherDisconnected_Action"	"Mais informações"
+"[english]Warning_DismissableWarning_HeadsetTetherDisconnected_Action"	"More info"
+"Warning_DismissableWarning_HeadsetTetherDisconnected_ActionURL"	"https://help.steampowered.com/pt/wizard/HelpWithGame/?appid=250820"
+"[english]Warning_DismissableWarning_HeadsetTetherDisconnected_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
+"Warning_DismissableWarning_OutOfVideoMemory_Header"	"Memória de vídeo esgotada"
+"[english]Warning_DismissableWarning_OutOfVideoMemory_Header"	"Out Of Video Memory"
+"Warning_DismissableWarning_OutOfVideoMemory_Description"	"O teu sistema está a ficar sem memória de vídeo, o que pode causar um mau desempenho. Tenta sair da aplicação atual, ou reinicia o SteamVR."
+"[english]Warning_DismissableWarning_OutOfVideoMemory_Description"	"Your system is running low on video memory which will cause poor performance. Try exiting the current application, or restarting SteamVR."
+"Warning_DismissableWarning_OutOfVideoMemory_Action"	"Mais informações"
+"[english]Warning_DismissableWarning_OutOfVideoMemory_Action"	"More info"
+"Warning_DismissableWarning_OutOfVideoMemory_ActionURL"	"https://help.steampowered.com/pt/wizard/HelpWithGame/?appid=250820"
+"[english]Warning_DismissableWarning_OutOfVideoMemory_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
+"VRInitError_Driver_HmdDisplayNotFoundLaptop_Header"	"Portátil: Ecrã do headset desconectado"
+"[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_Header"	"Laptop: Headset Display Disconnected"
+"VRInitError_Driver_HmdDisplayNotFoundLaptop_Description"	"Assegura-te de que os cabos de vídeo estão conectados devidamente ao teu portátil. Portáteis podem precisar de passos adicionais para que funcionem com realidade virtual."
+"[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_Description"	"Please make sure your video cables are securely connected to your laptop. Laptops may require special setup to work with VR."
+"VRInitError_Driver_HmdDisplayNotFoundLaptop_FirstAction"	"Reiniciar headset"
+"[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_FirstAction"	"Reset Headset"
+"VRInitError_Driver_HmdDisplayNotFoundLaptop_FirstActionURL"	"vrmonitor://reboothmd"
+"[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_FirstActionURL"	"vrmonitor://reboothmd"
+"VRInitError_Driver_HmdDisplayNotFoundLaptop_Action"	"Mais informações"
+"[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_Action"	"More info"
+"VRInitError_Driver_HmdDisplayNotFoundLaptop_ActionURL"	"https://help.steampowered.com/pt/wizard/HelpWithGameIssue/?appid=250820&issueid=374&nodeid=39&return_nodeid=71"
+"[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGameIssue/?appid=250820&issueid=374&nodeid=39&return_nodeid=71"
 }
 }
