--- a/content/vrmonitor/translations/vrmonitor_finnish.txt
+++ b/content/vrmonitor/translations/vrmonitor_finnish.txt
@@ -2244,10 +2244,28 @@
 "[english]FirmwareWizard_DeviceOverview_FailedToUpdate"	"Failed To Update"
 "FirmwareWizard_DeviceOverview_LookingForDevice"	"Etsitään laitetta...."
 "[english]FirmwareWizard_DeviceOverview_LookingForDevice"	"Looking For Device...."
+"FirmwareWizard_WirelessServicesRequired_Title"	"Päivitä tukiasema"
+"[english]FirmwareWizard_WirelessServicesRequired_Title"	"Update Base Station"
+"FirmwareWizard_WirelessServicesRequired"	"Bluetooth-palvelun tulee olla käytössä, jotta tukiasema voidaan päivittää langattomasti.\n\nOta SteamVR Bluetooth -palvelu käyttöön.\n"
+"[english]FirmwareWizard_WirelessServicesRequired"	"Bluetooth services need to be enabled to wirelessly update this Base Station.\n\nPlease enable the SteamVR Bluetooth Service.\n"
+"FirmwareWizard_ProgressPercent"	"[ %1% ]"
+"[english]FirmwareWizard_ProgressPercent"	"[ %1% ]"
+"FirmwareWizard_BaseStationBluetoothBootloaderUpdate"	"Laitepäivitys"
+"[english]FirmwareWizard_BaseStationBluetoothBootloaderUpdate"	"Device Update"
+"FirmwareWizard_BaseStationBluetoothRadioUpdate"	"Laitepäivitys"
+"[english]FirmwareWizard_BaseStationBluetoothRadioUpdate"	"Device Update"
+"BS20_ConfigureChannel_Identify"	"Klikkaa tunnistaaksesi tukiaseman"
+"[english]BS20_ConfigureChannel_Identify"	"Click to identify Base Station"
 "BS_PowerManagement_VisibleNowInTracking"	"Tukiasemat näkyvät nyt tässä seurantaistunnossa"
 "[english]BS_PowerManagement_VisibleNowInTracking"	"Visible now in this tracking session"
 "Monitor_RestartRequestedDialog_Title"	"Käynnistettävä uudelleen"
-"[english]Monitor_RestartRequestedDialog_Title"	"Restart Required"
+"[english]Monitor_RestartRequestedDialog_Title"	"Restart for %1 driver"
+"Monitor_RestartRequestedDialog_Message"	"%1"
+"[english]Monitor_RestartRequestedDialog_Message"	"%1"
+"Monitor_RestartRequestedDialog_Restart"	"Käynnistä SteamVR uudelleen"
+"[english]Monitor_RestartRequestedDialog_Restart"	"Restart SteamVR"
+"Monitor_RestartRequestedDialog_Quit"	"Sulje SteamVR"
+"[english]Monitor_RestartRequestedDialog_Quit"	"Quit SteamVR"
 "BS20_ConfigureChannel_FirmwareUpdateRequired"	"%1 tarvitsee päivityksen kanava-asetusten muokkaamiseksi."
 "[english]BS20_ConfigureChannel_FirmwareUpdateRequired"	"%1 requires a device update to enable channel configuration."
 "BS20_ConfigureChannel_ProgressConnecting"	"\nYhdistetään tukiasemaan...\n"
@@ -2276,6 +2294,8 @@
 "[english]Monitor_PuttingBaseStationsInStandby"	"Bases Powering Down..."
 "Settings_BaseStation_ContinueBaseStationUpdate"	"Palautus keskeytyneen päivityksen vuoksi"
 "[english]Settings_BaseStation_ContinueBaseStationUpdate"	"Recover From Incomplete Update"
+"FirmwareWizard_UpdateBasestationWireless_Fail_VersionRejected"	"Päivitys keskeytetty. Tukiasemaan on jo asennettu uudempi päivitys."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_VersionRejected"	"This Base Station has a newer version of the update and has rejected it."
 "FirmwareWizard_UpdateBasestationWireless_Fail_ClickRetry"	"Jatka klikkaamalla alta \"Yritä uudelleen\""
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_ClickRetry"	"Click 'Retry' below to try again."
 "FirmwareWizard_UpdateBasestationWireless_Fail_ClickCancel"	"Klikkaa alta \"Peruuta\", niin SteamVR käynnistyy uudelleen."
@@ -2288,17 +2308,31 @@
 "[english]BS20_UpdateRecovery_Title"	"Base Station 2.0 Update Recovery"
 "BS20_UpdateRecovery_Scanning"	"Etsitään tukiasemia...\n\n%1 sekuntia jäljellä."
 "[english]BS20_UpdateRecovery_Scanning"	"Scanning For Base Stations...\n\n%1 Seconds Remaining."
+"BS20_UpdateRecovery_Incomplete"	"Etsitään tukiasemia...\n\nKeskeytyi."
+"[english]BS20_UpdateRecovery_Incomplete"	"Scanning For Base Stations...\n\nIncomplete."
 "BS20_UpdateRecovery_FoundStation"	"Etsintä suoritettu.<br><br><font color=#ffffff><b>Löydetty päivitystä odottava tukiasema.</b></font><br><br>Jatka päivitystä klikkaamalla alta \"Päivitä laite\"."
 "[english]BS20_UpdateRecovery_FoundStation"	"Scan Completed.<br><br><font color=#ffffff><b>Discovered a Base Station with an incomplete update preventing it from operating normally.</b></font><br><br>Click 'Update Device' below to continue the update."
 "BS20_UpdateRecovery_NoStationsFound"	"Etsintä suoritettu.\n\nKuuluvuusalueelta ei löydy laitetta, joka tarvitsisi palautusta."
 "[english]BS20_UpdateRecovery_NoStationsFound"	"Scan Completed.\n\nThere are no broadcasting Base Stations needing recovery within proximity."
 "BS20_UpdateRecovery_Refresh"	"Skannaa uudelleen"
 "[english]BS20_UpdateRecovery_Refresh"	"Scan Again"
-"BS20_UpdateRecovery_UpdateDevice"	"Päivitä laite"
-"[english]BS20_UpdateRecovery_UpdateDevice"	"Update Device"
+"BS20_UpdateRecovery_UpdateDevice"	"Palauta laite"
+"[english]BS20_UpdateRecovery_UpdateDevice"	"Recover Device"
 "VRApplicationError_None"	"Ei virhettä"
 "[english]VRApplicationError_None"	"No Error"
+"VRApplicationError_AppKeyAlreadyExists"	"Sovellus on jo rekisteröity"
+"[english]VRApplicationError_AppKeyAlreadyExists"	"Application is already registered"
+"VRApplicationError_UnknownApplication"	"Tunnistamaton sovellus"
+"[english]VRApplicationError_UnknownApplication"	"Unknown application"
 "VRApplicationError_SteamVRIsExiting"	"SteamVR poistuu"
 "[english]VRApplicationError_SteamVRIsExiting"	"SteamVR is exiting"
+"VRApplicationError_PropertyNotSet"	"Ominaisuutta ei ole asetettu"
+"[english]VRApplicationError_PropertyNotSet"	"Property was not set"
+"VRApplicationError_UnknownProperty"	"Tunnistamaton ominaisuus"
+"[english]VRApplicationError_UnknownProperty"	"Unknown property"
+"VRApplicationError_InvalidParameter"	"Parametri ei kelpaa"
+"[english]VRApplicationError_InvalidParameter"	"Invalid parameter"
+"oculus_display_lost"	"Oculuksen yhteys näyttöön katkesi. Käynnistä uudelleen, kun olet tarkistanut VR-lasiesi kytkennät."
+"[english]oculus_display_lost"	"The Oculus system has lost its connection to the display. Please check your headset's connection and then restart."
 }
 }
