--- a/content/vrmonitor/translations/vrmonitor_french.txt
+++ b/content/vrmonitor/translations/vrmonitor_french.txt
@@ -2280,12 +2280,12 @@
 "[english]BS20_ConfigureChannel_IdentifyRequiresFirmareUpdate"	"%1 requires a device update to enable device identification."
 "BS_PowerManagement_VisibleNowInTracking"	"Maintenant visible dans cette session de tracking"
 "[english]BS_PowerManagement_VisibleNowInTracking"	"Visible now in this tracking session"
-"Monitor_RestartRequestedDialog_Title"	"Redémarrage nécessaire"
-"[english]Monitor_RestartRequestedDialog_Title"	"Restart Required"
+"Monitor_RestartRequestedDialog_Title"	"Redémarrer pour installer le pilote %1"
+"[english]Monitor_RestartRequestedDialog_Title"	"Restart for %1 driver"
 "Monitor_RestartRequestedDialog_MessageNoReason"	"SteamVR doit être redémarré pour installer le pilote %1."
 "[english]Monitor_RestartRequestedDialog_MessageNoReason"	"Driver %1 needs to restart SteamVR."
-"Monitor_RestartRequestedDialog_Message"	"SteamVR doit être redémarré pour installer le pilote %1.\n%2"
-"[english]Monitor_RestartRequestedDialog_Message"	"Driver %1 needs to restart SteamVR.\n%2"
+"Monitor_RestartRequestedDialog_Message"	"%1"
+"[english]Monitor_RestartRequestedDialog_Message"	"%1"
 "Monitor_RestartRequestedDialog_Restart"	"Redémarrer SteamVR"
 "[english]Monitor_RestartRequestedDialog_Restart"	"Restart SteamVR"
 "Monitor_RestartRequestedDialog_Quit"	"Quitter SteamVR"
@@ -2348,8 +2348,8 @@
 "[english]BS20_UpdateRecovery_NoStationsFound"	"Scan Completed.\n\nThere are no broadcasting Base Stations needing recovery within proximity."
 "BS20_UpdateRecovery_Refresh"	"Rechercher à nouveau"
 "[english]BS20_UpdateRecovery_Refresh"	"Scan Again"
-"BS20_UpdateRecovery_UpdateDevice"	"Mettre à jour le périphérique"
-"[english]BS20_UpdateRecovery_UpdateDevice"	"Update Device"
+"BS20_UpdateRecovery_UpdateDevice"	"Récupération du périphérique"
+"[english]BS20_UpdateRecovery_UpdateDevice"	"Recover Device"
 "VRApplicationError_None"	"Aucune erreur"
 "[english]VRApplicationError_None"	"No Error"
 "VRApplicationError_AppKeyAlreadyExists"	"L'application est déjà enregistrée"
@@ -2396,5 +2396,9 @@
 "[english]Settings_Advanced_RefreshRate_NotFound"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but they were not detected by the graphics driver."
 "Settings_Advanced_RefreshRate_NotAvailableExtended"	"<b>REMARQUE :</b> votre casque est compatible avec d'autres fréquences de rafraîchissement, mais SteamVR ne peut pas les gérer quand le casque est en mode étendu. <a href='vrmonitor://directmode/enable'><span style='color:white;'>Cliquez ici pour activer le mode direct</span></a>."
 "[english]Settings_Advanced_RefreshRate_NotAvailableExtended"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but SteamVR cannot manage refresh rates when the HMD is in extended mode. <a href='vrmonitor://directmode/enable'><span style='color:white;'>Enable direct mode.</span></a>"
+"oculus_display_lost"	"La connexion entre le système Oculus et l'affichage a été interrompue. Veuillez vérifier les branchements du casque et redémarrer."
+"[english]oculus_display_lost"	"The Oculus system has lost its connection to the display. Please check your headset's connection and then restart."
+"BS20_UpdateRecovery_FoundStations"	"Analyse terminée.<br><br><font color=#ffffff>Les mises à jour de ces stations de base sont incomplètes.<br><br>Veuillez sélectionner une station de base et cliquer sur « Récupération du périphérique » pour continuer.</font>"
+"[english]BS20_UpdateRecovery_FoundStations"	"Scan Completed.<br><br><font color=#ffffff>These Base Stations have incomplete updates.<br><br>Please select a Base Station and click 'Recover Device' to continue.</font>"
 }
 }
