--- a/content/vrmonitor/translations/vrmonitor_turkish.txt
+++ b/content/vrmonitor/translations/vrmonitor_turkish.txt
@@ -2279,11 +2279,11 @@
 "BS_PowerManagement_VisibleNowInTracking"	"Bu izleme oturumunda artık görünür"
 "[english]BS_PowerManagement_VisibleNowInTracking"	"Visible now in this tracking session"
 "Monitor_RestartRequestedDialog_Title"	"Yeniden Başlatma Gerekli"
-"[english]Monitor_RestartRequestedDialog_Title"	"Restart Required"
+"[english]Monitor_RestartRequestedDialog_Title"	"Restart for %1 driver"
 "Monitor_RestartRequestedDialog_MessageNoReason"	"%1 sürücüsünün SteamVR'ı yeniden başlatması gerekli."
 "[english]Monitor_RestartRequestedDialog_MessageNoReason"	"Driver %1 needs to restart SteamVR."
 "Monitor_RestartRequestedDialog_Message"	"%1 sürücüsünün SteamVR'ı yeniden başlatması gerekli.\n%2"
-"[english]Monitor_RestartRequestedDialog_Message"	"Driver %1 needs to restart SteamVR.\n%2"
+"[english]Monitor_RestartRequestedDialog_Message"	"%1"
 "Monitor_RestartRequestedDialog_Restart"	"SteamVR'ı Yeniden Başlat"
 "[english]Monitor_RestartRequestedDialog_Restart"	"Restart SteamVR"
 "Monitor_RestartRequestedDialog_Quit"	"SteamVR'dan Çık"
@@ -2341,7 +2341,7 @@
 "BS20_UpdateRecovery_Refresh"	"Tekrar Tara"
 "[english]BS20_UpdateRecovery_Refresh"	"Scan Again"
 "BS20_UpdateRecovery_UpdateDevice"	"Cihazı Güncelle"
-"[english]BS20_UpdateRecovery_UpdateDevice"	"Update Device"
+"[english]BS20_UpdateRecovery_UpdateDevice"	"Recover Device"
 "VRApplicationError_None"	"Hata yok"
 "[english]VRApplicationError_None"	"No Error"
 "VRApplicationError_AppKeyAlreadyExists"	"Uygulama zaten kaydolundu"
@@ -2350,6 +2350,8 @@
 "[english]VRApplicationError_NoManifest"	"No application Manifest"
 "VRApplicationError_NoApplication"	"Uygulama yok"
 "[english]VRApplicationError_NoApplication"	"No application"
+"VRApplicationError_InvalidIndex"	"Geçersiz İndeks"
+"[english]VRApplicationError_InvalidIndex"	"Invalid Index"
 "VRApplicationError_UnknownApplication"	"Bilinmeyen uygulama"
 "[english]VRApplicationError_UnknownApplication"	"Unknown application"
 "VRApplicationError_IPCFailed"	"Uygulama talebi başarısız"
@@ -2370,6 +2372,8 @@
 "[english]VRApplicationError_OldApplicationQuitting"	"Another application was already exiting"
 "VRApplicationError_TransitionAborted"	"Uygulamanın başlaması kulllanıcı tarafından iptal edildi"
 "[english]VRApplicationError_TransitionAborted"	"Application start aborted by user"
+"VRApplicationError_IsTemplate"	"Bu bir şablon uygulamasıdır"
+"[english]VRApplicationError_IsTemplate"	"This is a template application"
 "VRApplicationError_SteamVRIsExiting"	"SteamVR'dan çıkış yapılıyor"
 "[english]VRApplicationError_SteamVRIsExiting"	"SteamVR is exiting"
 "VRApplicationError_PropertyNotSet"	"Özellik ayarlanmadı"
