--- a/content/panorama/localization/tenfoot_brazilian.txt
+++ b/content/panorama/localization/tenfoot_brazilian.txt
@@ -619,9 +619,9 @@
 "Now_Waiting"	"ESPERANDO..."
 "[english]Now_Waiting"	"WAITING..."
 "HomeAppCheck"	"Ambientes SteamVR aprimorados"
-"[english]HomeAppCheck"	"Enhanced SteamVR Environments"
+"[english]HomeAppCheck"	"SteamVR Home"
 "HomeAppDesc"	"Os novos Ambientes SteamVR permitem espaços iniciais maiores, funcionalidades sociais e mais. Ative para testar e dar feedback nos fóruns do SteamVR."
-"[english]HomeAppDesc"	"The new SteamVR Environments supports richer home spaces, social features, and more. Opt in to test and provide feedback on the SteamVR forums."
+"[english]HomeAppDesc"	"SteamVR Home experience supports richer home spaces, social features, and more."
 "MutedLabel"	"Silenciado"
 "[english]MutedLabel"	"Muted"
 "BackToApp"	"VOLTAR AO APLICATIVO"
@@ -668,6 +668,6 @@
 "[english]Panorama_Selection_Vietnamese"	"Tiếng Việt (Vietnamese)"
 "BindingCallout_Header"	"EXIBIR CONTROLES"
 "[english]BindingCallout_Header"	"SHOW CONTROLS"
-"App_Not_Responding"	"O aplicativo não está respondendo..."
-"[english]App_Not_Responding"	"Application not responding..."
+"App_Not_Responding"	"Esperando resposta do aplicativo"
+"[english]App_Not_Responding"	"Waiting for application to respond"
 }
