--- a/content/panorama/localization/tenfoot_koreana.txt
+++ b/content/panorama/localization/tenfoot_koreana.txt
@@ -619,9 +619,9 @@
 "Now_Waiting"	"대기 중:"
 "[english]Now_Waiting"	"WAITING..."
 "HomeAppCheck"	"향상된 SteamVR 환경"
-"[english]HomeAppCheck"	"Enhanced SteamVR Environments"
+"[english]HomeAppCheck"	"SteamVR Home"
 "HomeAppDesc"	"새로운 SteamVR 환경은 더 넓은 홈 공간, 교류 기능 등 여러 가지를 지원합니다. 테스트에 참여하시고 SteamVR 토론장에 의견을 남겨 주세요."
-"[english]HomeAppDesc"	"The new SteamVR Environments supports richer home spaces, social features, and more. Opt in to test and provide feedback on the SteamVR forums."
+"[english]HomeAppDesc"	"SteamVR Home experience supports richer home spaces, social features, and more."
 "MutedLabel"	"음성 차단됨"
 "[english]MutedLabel"	"Muted"
 "BackToApp"	"앱으로 돌아가기"
