--- a/content/panorama/localization/tenfoot_russian.txt
+++ b/content/panorama/localization/tenfoot_russian.txt
@@ -619,10 +619,10 @@
 "[english]Transition_Progress_Description"	"WAITING FOR..."
 "Now_Waiting"	"ОЖИДАНИЕ..."
 "[english]Now_Waiting"	"WAITING..."
-"HomeAppCheck"	"Дополненная среда SteamVR"
-"[english]HomeAppCheck"	"Enhanced SteamVR Environments"
-"HomeAppDesc"	"Дополненная среда SteamVR поддерживает более насыщенные личные миры, новые социальные функции и многое другое. Попробуйте этот режим и поделитесь своими впечатлениями в обсуждениях SteamVR."
-"[english]HomeAppDesc"	"The new SteamVR Environments supports richer home spaces, social features, and more. Opt in to test and provide feedback on the SteamVR forums."
+"HomeAppCheck"	"Домашний мир SteamVR"
+"[english]HomeAppCheck"	"SteamVR Home"
+"HomeAppDesc"	"Домашний мир SteamVR поддерживает более насыщенные личные миры, новые социальные функции и многое другое."
+"[english]HomeAppDesc"	"SteamVR Home experience supports richer home spaces, social features, and more."
 "MutedLabel"	"Звук отключён"
 "[english]MutedLabel"	"Muted"
 "BackToApp"	"В ПРИЛОЖЕНИЕ"
@@ -669,6 +669,6 @@
 "[english]Panorama_Selection_Vietnamese"	"Tiếng Việt (Vietnamese)"
 "BindingCallout_Header"	"ПОКАЗАТЬ НАСТРОЙКИ"
 "[english]BindingCallout_Header"	"SHOW CONTROLS"
-"App_Not_Responding"	"Приложение не отвечает..."
-"[english]App_Not_Responding"	"Application not responding..."
+"App_Not_Responding"	"Ожидается ответ приложения"
+"[english]App_Not_Responding"	"Waiting for application to respond"
 }
