--- a/content/panorama/localization/tenfoot_turkish.txt
+++ b/content/panorama/localization/tenfoot_turkish.txt
@@ -619,9 +619,9 @@
 "Now_Waiting"	"BEKLENİYOR..."
 "[english]Now_Waiting"	"WAITING..."
 "HomeAppCheck"	"Gelişmiş SteamVR Ortamları"
-"[english]HomeAppCheck"	"Enhanced SteamVR Environments"
+"[english]HomeAppCheck"	"SteamVR Home"
 "HomeAppDesc"	"Yeni SteamVR Ortamları daha çeşitli evler, sosyal özellikler ve daha fazlasını destekler. SteamVR forumlarında geri bildirim vermek için ve test edebilmek için siz de katılın."
-"[english]HomeAppDesc"	"The new SteamVR Environments supports richer home spaces, social features, and more. Opt in to test and provide feedback on the SteamVR forums."
+"[english]HomeAppDesc"	"SteamVR Home experience supports richer home spaces, social features, and more."
 "MutedLabel"	"Susturuldu"
 "[english]MutedLabel"	"Muted"
 "BackToApp"	"UYGULAMAYA GERİ DÖN"
@@ -666,4 +666,8 @@
 "[english]Panorama_Selection_Latam_Spanish"	"Español-Latinoamérica (Spanish-Latin America)"
 "Panorama_Selection_Vietnamese"	"Tiếng Việt (Vietnamca)"
 "[english]Panorama_Selection_Vietnamese"	"Tiếng Việt (Vietnamese)"
+"BindingCallout_Header"	"KONTROLLERİ GÖSTER"
+"[english]BindingCallout_Header"	"SHOW CONTROLS"
+"App_Not_Responding"	"Uygulama yanıt vermiyor..."
+"[english]App_Not_Responding"	"Waiting for application to respond"
 }
