--- a/content/vrmonitor/translations/vrmonitor_bulgarian.txt
+++ b/content/vrmonitor/translations/vrmonitor_bulgarian.txt
@@ -2273,12 +2273,12 @@
 "[english]BS20_ConfigureChannel_IdentifyRequiresFirmareUpdate"	"%1 requires a device update to enable device identification."
 "BS_PowerManagement_VisibleNowInTracking"	"Видимо сега в тази проследяваща сесия"
 "[english]BS_PowerManagement_VisibleNowInTracking"	"Visible now in this tracking session"
-"Monitor_RestartRequestedDialog_Title"	"Изисква се рестартиране"
-"[english]Monitor_RestartRequestedDialog_Title"	"Restart Required"
+"Monitor_RestartRequestedDialog_Title"	"Рестартиране за %1 драйвера"
+"[english]Monitor_RestartRequestedDialog_Title"	"Restart for %1 driver"
 "Monitor_RestartRequestedDialog_MessageNoReason"	"Нужно е %1 драйверът да рестартира SteamVR."
 "[english]Monitor_RestartRequestedDialog_MessageNoReason"	"Driver %1 needs to restart SteamVR."
-"Monitor_RestartRequestedDialog_Message"	"Нужно е %1 драйверът да рестартира SteamVR.\n%2"
-"[english]Monitor_RestartRequestedDialog_Message"	"Driver %1 needs to restart SteamVR.\n%2"
+"Monitor_RestartRequestedDialog_Message"	"%1"
+"[english]Monitor_RestartRequestedDialog_Message"	"%1"
 "Monitor_RestartRequestedDialog_Restart"	"Рестартиране на SteamVR"
 "[english]Monitor_RestartRequestedDialog_Restart"	"Restart SteamVR"
 "Monitor_RestartRequestedDialog_Quit"	"Изход от SteamVR"
@@ -2341,8 +2341,8 @@
 "[english]BS20_UpdateRecovery_NoStationsFound"	"Scan Completed.\n\nThere are no broadcasting Base Stations needing recovery within proximity."
 "BS20_UpdateRecovery_Refresh"	"Сканиране отново"
 "[english]BS20_UpdateRecovery_Refresh"	"Scan Again"
-"BS20_UpdateRecovery_UpdateDevice"	"Обновяване на устройство"
-"[english]BS20_UpdateRecovery_UpdateDevice"	"Update Device"
+"BS20_UpdateRecovery_UpdateDevice"	"Възстановяване на устройство"
+"[english]BS20_UpdateRecovery_UpdateDevice"	"Recover Device"
 "VRApplicationError_None"	"Няма грешка"
 "[english]VRApplicationError_None"	"No Error"
 "VRApplicationError_AppKeyAlreadyExists"	"Приложението вече е регистрирано"
@@ -2389,5 +2389,9 @@
 "[english]Settings_Advanced_RefreshRate_NotFound"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but they were not detected by the graphics driver."
 "Settings_Advanced_RefreshRate_NotAvailableExtended"	"<b>ЗАБЕЛЕЖКА:</b> Поддържат се допълнителни честоти на опресняване от ВР шлема Ви. Но SteamVR не може да ги управлява, когато ВР шлемът е в разширен режим. <a title=\"Включване на директен режим\" href='vrmonitor://directmode/enable'><span style='color:white;'>Включете директен режим.</span></a>"
 "[english]Settings_Advanced_RefreshRate_NotAvailableExtended"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but SteamVR cannot manage refresh rates when the HMD is in extended mode. <a href='vrmonitor://directmode/enable'><span style='color:white;'>Enable direct mode.</span></a>"
+"oculus_display_lost"	"Oculus системата загуби своята връзка към екрана. Моля, проверете връзката на своя ВР шлем, а след това рестартирайте."
+"[english]oculus_display_lost"	"The Oculus system has lost its connection to the display. Please check your headset's connection and then restart."
+"BS20_UpdateRecovery_FoundStations"	"Сканирането е завършено.<br><br><font color=#ffffff>Тези базови станции разполагат с незавършено обновления.<br><br>Моля, изберете базова станция и кликнете върху „Възстановяване на устройство“, за да продължите.</font>"
+"[english]BS20_UpdateRecovery_FoundStations"	"Scan Completed.<br><br><font color=#ffffff>These Base Stations have incomplete updates.<br><br>Please select a Base Station and click 'Recover Device' to continue.</font>"
 }
 }
