--- a/content/vrmonitor/translations/vrmonitor_russian.txt
+++ b/content/vrmonitor/translations/vrmonitor_russian.txt
@@ -2290,12 +2290,12 @@
 "[english]BS20_ConfigureChannel_IdentifyRequiresFirmareUpdate"	"%1 requires a device update to enable device identification."
 "BS_PowerManagement_VisibleNowInTracking"	"Теперь видно в этой сессии трекинга"
 "[english]BS_PowerManagement_VisibleNowInTracking"	"Visible now in this tracking session"
-"Monitor_RestartRequestedDialog_Title"	"Требуется перезапуск"
-"[english]Monitor_RestartRequestedDialog_Title"	"Restart Required"
+"Monitor_RestartRequestedDialog_Title"	"Требуется перезапуск для драйвера %1"
+"[english]Monitor_RestartRequestedDialog_Title"	"Restart for %1 driver"
 "Monitor_RestartRequestedDialog_MessageNoReason"	"Для драйвера %1 требуется перезапуск SteamVR."
 "[english]Monitor_RestartRequestedDialog_MessageNoReason"	"Driver %1 needs to restart SteamVR."
-"Monitor_RestartRequestedDialog_Message"	"Для драйвера %1 требуется перезапуск SteamVR.\n%2"
-"[english]Monitor_RestartRequestedDialog_Message"	"Driver %1 needs to restart SteamVR.\n%2"
+"Monitor_RestartRequestedDialog_Message"	"%1"
+"[english]Monitor_RestartRequestedDialog_Message"	"%1"
 "Monitor_RestartRequestedDialog_Restart"	"Перезапустить SteamVR"
 "[english]Monitor_RestartRequestedDialog_Restart"	"Restart SteamVR"
 "Monitor_RestartRequestedDialog_Quit"	"Выйти из SteamVR"
@@ -2358,8 +2358,8 @@
 "[english]BS20_UpdateRecovery_NoStationsFound"	"Scan Completed.\n\nThere are no broadcasting Base Stations needing recovery within proximity."
 "BS20_UpdateRecovery_Refresh"	"Повторить поиск"
 "[english]BS20_UpdateRecovery_Refresh"	"Scan Again"
-"BS20_UpdateRecovery_UpdateDevice"	"Обновить устройство"
-"[english]BS20_UpdateRecovery_UpdateDevice"	"Update Device"
+"BS20_UpdateRecovery_UpdateDevice"	"Восстановить устройство"
+"[english]BS20_UpdateRecovery_UpdateDevice"	"Recover Device"
 "VRApplicationError_None"	"Нет ошибок"
 "[english]VRApplicationError_None"	"No Error"
 "VRApplicationError_AppKeyAlreadyExists"	"Приложение уже зарегистрировано"
@@ -2406,5 +2406,9 @@
 "[english]Settings_Advanced_RefreshRate_NotFound"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but they were not detected by the graphics driver."
 "Settings_Advanced_RefreshRate_NotAvailableExtended"	"<b>ВНИМАНИЕ:</b> ваш шлем поддерживает дополнительные частоты обновления, но SteamVR не может ими управлять, когда шлем находится в расширенном режиме. <a href='vrmonitor://directmode/enable'><span style='color:white;'>Включить прямой режим.</span></a>"
 "[english]Settings_Advanced_RefreshRate_NotAvailableExtended"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but SteamVR cannot manage refresh rates when the HMD is in extended mode. <a href='vrmonitor://directmode/enable'><span style='color:white;'>Enable direct mode.</span></a>"
+"oculus_display_lost"	"Система Oculus потеряла соединение с экраном. Пожалуйста, проверьте подключение шлема и перезапустите программу."
+"[english]oculus_display_lost"	"The Oculus system has lost its connection to the display. Please check your headset's connection and then restart."
+"BS20_UpdateRecovery_FoundStations"	"Сканирование завершено.<br><br><font color=#ffffff>Эти базовые станции не обновились до конца.<br><br>Чтобы продолжить, выберите базовую станцию и нажмите «Восстановить устройство».</font>"
+"[english]BS20_UpdateRecovery_FoundStations"	"Scan Completed.<br><br><font color=#ffffff>These Base Stations have incomplete updates.<br><br>Please select a Base Station and click 'Recover Device' to continue.</font>"
 }
 }
