--- a/content/vrmonitor/translations/vrmonitor_ukrainian.txt
+++ b/content/vrmonitor/translations/vrmonitor_ukrainian.txt
@@ -2285,12 +2285,12 @@
 "[english]BS20_ConfigureChannel_IdentifyRequiresFirmareUpdate"	"%1 requires a device update to enable device identification."
 "BS_PowerManagement_VisibleNowInTracking"	"Відтепер видно в цій сесії відстеження"
 "[english]BS_PowerManagement_VisibleNowInTracking"	"Visible now in this tracking session"
-"Monitor_RestartRequestedDialog_Title"	"Необхідний перезапуск"
-"[english]Monitor_RestartRequestedDialog_Title"	"Restart Required"
+"Monitor_RestartRequestedDialog_Title"	"Необхідний перезапуск драйвера %1"
+"[english]Monitor_RestartRequestedDialog_Title"	"Restart for %1 driver"
 "Monitor_RestartRequestedDialog_MessageNoReason"	"Драйвер %1 вимагає перезапуску SteamVR."
 "[english]Monitor_RestartRequestedDialog_MessageNoReason"	"Driver %1 needs to restart SteamVR."
-"Monitor_RestartRequestedDialog_Message"	"Драйвер %1 вимагає перезапуску SteamVR.\n%2"
-"[english]Monitor_RestartRequestedDialog_Message"	"Driver %1 needs to restart SteamVR.\n%2"
+"Monitor_RestartRequestedDialog_Message"	"%1"
+"[english]Monitor_RestartRequestedDialog_Message"	"%1"
 "Monitor_RestartRequestedDialog_Restart"	"Перезапустити SteamVR"
 "[english]Monitor_RestartRequestedDialog_Restart"	"Restart SteamVR"
 "Monitor_RestartRequestedDialog_Quit"	"Вийти зі SteamVR"
@@ -2353,8 +2353,8 @@
 "[english]BS20_UpdateRecovery_NoStationsFound"	"Scan Completed.\n\nThere are no broadcasting Base Stations needing recovery within proximity."
 "BS20_UpdateRecovery_Refresh"	"Сканувати знову"
 "[english]BS20_UpdateRecovery_Refresh"	"Scan Again"
-"BS20_UpdateRecovery_UpdateDevice"	"Оновлення пристрою"
-"[english]BS20_UpdateRecovery_UpdateDevice"	"Update Device"
+"BS20_UpdateRecovery_UpdateDevice"	"Відновити пристрій"
+"[english]BS20_UpdateRecovery_UpdateDevice"	"Recover Device"
 "VRApplicationError_None"	"Без помилок"
 "[english]VRApplicationError_None"	"No Error"
 "VRApplicationError_AppKeyAlreadyExists"	"Застосунок уже зареєстровано"
@@ -2401,5 +2401,9 @@
 "[english]Settings_Advanced_RefreshRate_NotFound"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but they were not detected by the graphics driver."
 "Settings_Advanced_RefreshRate_NotAvailableExtended"	"<b>ПРИМІТКА:</b> шолом підтримує додаткові частоти оновлення, але SteamVR не може ними керувати, коли шолом знаходиться в розширеному режимі. <a href='vrmonitor://directmode/enable'><span style='color:white;'>Увімкнути прямий режим.</span></a>"
 "[english]Settings_Advanced_RefreshRate_NotAvailableExtended"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but SteamVR cannot manage refresh rates when the HMD is in extended mode. <a href='vrmonitor://directmode/enable'><span style='color:white;'>Enable direct mode.</span></a>"
+"oculus_display_lost"	"Система Oculus втратила зв’язок із дисплеєм. Перевірте з’єднання із шоломом та перезавантажте систему."
+"[english]oculus_display_lost"	"The Oculus system has lost its connection to the display. Please check your headset's connection and then restart."
+"BS20_UpdateRecovery_FoundStations"	"Сканування завершено.<br><br><font color=#ffffff>Ці базові станції не закінчили оновлення.<br><br>Для продовження виберіть базову станцію та натисніть «Відновити пристрій».</font>"
+"[english]BS20_UpdateRecovery_FoundStations"	"Scan Completed.<br><br><font color=#ffffff>These Base Stations have incomplete updates.<br><br>Please select a Base Station and click 'Recover Device' to continue.</font>"
 }
 }
